{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 2119,
  "lineage": "bc161195-7774-1177-82ad-f56001af2e91",
  "resources": [
    {
      "module": "module.beanstalk",
      "mode": "data",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:884878220922:loadbalancer/app/awseb--AWSEB-4i3XsLNLbtBB/14ab57950a7f290c",
            "arn_suffix": "app/awseb--AWSEB-4i3XsLNLbtBB/14ab57950a7f290c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "awseb--AWSEB-4i3XsLNLbtBB-2124395110.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:884878220922:loadbalancer/app/awseb--AWSEB-4i3XsLNLbtBB/14ab57950a7f290c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "awseb--AWSEB-4i3XsLNLbtBB",
            "security_groups": [
              "sg-0ba8d5e24269492e8",
              "sg-0f816905e245b448f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e3b1731f21d9c4f"
              },
              {
                "subnet_id": "subnet-075bcf8f3e0dde6ee"
              }
            ],
            "subnets": [
              "subnet-04e3b1731f21d9c4f",
              "subnet-075bcf8f3e0dde6ee"
            ],
            "tags": {
              "Name": "swapapp-web-dev",
              "elasticbeanstalk:environment-id": "e-uhnkazpvf3",
              "elasticbeanstalk:environment-name": "swapapp-web-dev",
              "environment-name": "swapapp-web-dev"
            },
            "vpc_id": "vpc-00b019ccc52582380",
            "zone_id": "Z32O12XQLNTSW2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_ebslab_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:route-table/rtb-0b6fbcb268914aff3",
            "default_route_table_id": "rtb-0b6fbcb268914aff3",
            "id": "rtb-0b6fbcb268914aff3",
            "owner_id": "884878220922",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5a746e3c230385c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ebs-lab"
            },
            "tags_all": {
              "Name": "ebs-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b019ccc52582380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ebslab_gw",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ebslab_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:internet-gateway/igw-0f5a746e3c230385c",
            "id": "igw-0f5a746e3c230385c",
            "owner_id": "884878220922",
            "tags": {
              "Name": "ebs-lab"
            },
            "tags_all": {
              "Name": "ebs-lab"
            },
            "vpc_id": "vpc-00b019ccc52582380"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0848bcf963e2b4425",
            "route_table_id": "rtb-0b6fbcb268914aff3",
            "subnet_id": "subnet-075bcf8f3e0dde6ee"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_ebslab_default",
            "module.vpc.aws_internet_gateway.ebslab_gw",
            "module.vpc.aws_subnet.ebslab_subnets",
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5636d9c3fdb5a2c",
            "route_table_id": "rtb-0b6fbcb268914aff3",
            "subnet_id": "subnet-04e3b1731f21d9c4f"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_ebslab_default",
            "module.vpc.aws_internet_gateway.ebslab_gw",
            "module.vpc.aws_subnet.ebslab_subnets",
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ebslab_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:security-group/sg-0f816905e245b448f",
            "description": "Security group for Elastic Beanstalk",
            "egress": [],
            "id": "sg-0f816905e245b448f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "swapapp-sg",
            "name_prefix": "",
            "owner_id": "884878220922",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00b019ccc52582380"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ebslab_security_group_rule_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4044566305",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f816905e245b448f",
            "self": false,
            "source_security_group_id": "sg-0f816905e245b448f",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ebslab_security_group_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-105799729",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f816905e245b448f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ebslab_security_group_rule_ssl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2711929704",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f816905e245b448f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internal_mysql_communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3243070658",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f816905e245b448f",
            "self": false,
            "source_security_group_id": "sg-0f816905e245b448f",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ebslab_security_group",
            "module.vpc.aws_vpc.ebslab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ebslab_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-075bcf8f3e0dde6ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075bcf8f3e0dde6ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-00b019ccc52582380"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-04e3b1731f21d9c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e3b1731f21d9c4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-00b019ccc52582380"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-041eeaf4ec7a26d78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041eeaf4ec7a26d78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-00b019ccc52582380"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:subnet/subnet-0d11a8fe8e2d849f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d11a8fe8e2d849f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884878220922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-00b019ccc52582380"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ebslab_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ebslab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:884878220922:vpc/vpc-00b019ccc52582380",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012bc11bb8ccfbe03",
            "default_route_table_id": "rtb-0b6fbcb268914aff3",
            "default_security_group_id": "sg-0a5c3d541a3c9d0f4",
            "dhcp_options_id": "dopt-034758b73da6235d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00b019ccc52582380",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6fbcb268914aff3",
            "owner_id": "884878220922",
            "tags": {
              "Name": "ebs-lab"
            },
            "tags_all": {
              "Name": "ebs-lab"
            }
          }
        }
      ]
    }
  ]
}